# chahor_rotary_keyboard

./: Cargo.toml  LICENSE  README.md
3D_Print/: chahor_bottom_plate-Body.3mf  chahor_bottom_plate.FCStd  chahor_top_plate-Body.3mf  chahor_top_plate.20251111-101924.FCBak  chahor_top_plate.FCStd
KiCad/: key_labels.odg
KiCad/chahor_v1/: chahor_v1.kicad_pro  chahor_v1.kicad_sch  sym-lib-table
firmware/: Cargo.toml  Makefile.toml
firmware/.cargo/: config.toml
firmware/src/: boards.rs  constants.rs  keymaps.rs  main.rs  usb_keyboard.rs
src/: keymaps.rs  main.rs  symbols.rs  usb_keyboard.rs
