[package]
name = "rotary_keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
assign-resources = "0.5.0"
cortex-m = { version = "0.7.7", features = ["critical-section", "inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
itoa = { version = "1.0.15", features = ["no-panic"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
rotary-encoder-hal = { version = "0.6.0", features = ["table-decoder"] }
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = "2.1.1"
u8g2-fonts = "0.7.2"
usbd-hid = "0.8.2"

[features]
chahor_v1 = []

[profile.release]
debug = 0
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
